// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Article should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithShowLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutImageWithoutBlock 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead from block
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutLeadWithoutBlock 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead on the article
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutPreTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title on the article:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Article should render WithoutTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title from block
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render WithShowLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render WithoutLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        />
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render WithoutPreTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
             Teambesprechung vom 23.05.
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Custom should render WithoutTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render Default 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithShowLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutImage 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutImageWithoutBlock 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutLead 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Lead from block
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutLeadWithoutBlock 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title
          </h1>
        </header>
        <p
          class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
        >
          Description on the page
        </p>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutPreTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
             Title
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser Page should render WithoutTitle 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            Pre Title:  Title from block
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="extra-classname css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;

exports[`Teaser should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-1p0ks0j"
    x="0"
    y="0"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-9lisvk-MuiTypography-root-MuiLink-root"
      href="https://example.com"
    >
      <div
        class="css-rd719m"
      >
        <img
          alt="An image description"
          class="css-1qnf57e"
          height="500"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
          width="500"
        />
        <header
          class="css-0"
        >
          <h1
            class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
          >
            preTitle:  Teambesprechung vom 23.05.
          </h1>
        </header>
      </div>
    </a>
  </article>
</DocumentFragment>
`;
